// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid Col renders correctly with custom gutter 1`] = `
<DocumentFragment>
  .cache-futj6v-Col {
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 32px;
  padding-right: 32px;
}

<div
    class="efyj23m0 cache-futj6v-Col"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Col renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-14ypxq5-Col {
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 8px;
  padding-right: 8px;
}

<div
    class="efyj23m0 cache-14ypxq5-Col"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Col renders correctly with responsive as auto 1`] = `
<DocumentFragment>
  .cache-1t3w6md-Col {
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 8px;
  padding-right: 8px;
}

@media (min-width: 768px) {
  .cache-1t3w6md-Col {
    -webkit-flex: 0 0 auto;
    -ms-flex: 0 0 auto;
    flex: 0 0 auto;
    max-width: none;
    width: auto;
  }
}

<div
    class="efyj23m0 cache-1t3w6md-Col"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Col renders correctly with responsive as bool 1`] = `
<DocumentFragment>
  .cache-mnhu3t-Col {
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 8px;
  padding-right: 8px;
}

@media (min-width: 768px) {
  .cache-mnhu3t-Col {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    max-width: 100%;
  }
}

<div
    class="efyj23m0 cache-mnhu3t-Col"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Col renders correctly with responsive as number 1`] = `
<DocumentFragment>
  .cache-4xfyq9-Col {
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 8px;
  padding-right: 8px;
}

@media (min-width: 768px) {
  .cache-4xfyq9-Col {
    -webkit-flex: 0 0 33.3333%;
    -ms-flex: 0 0 33.3333%;
    flex: 0 0 33.3333%;
    max-width: 33.3333%;
  }
}

<div
    class="efyj23m0 cache-4xfyq9-Col"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Col renders correctly without responsive when smallest breakpoint 1`] = `
<DocumentFragment>
  .cache-s11c15-Col {
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 8px;
  padding-right: 8px;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
}

<div
    class="efyj23m0 cache-s11c15-Col"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Grid renders correctly when fluid 1`] = `
<DocumentFragment>
  .cache-ule4vc-Grid {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  padding-left: 8px;
  padding-right: 8px;
}

<div
    class="em1vjd40 cache-ule4vc-Grid"
  >
    Sample Grid
  </div>
</DocumentFragment>
`;

exports[`Grid Grid renders correctly with custom gutter 1`] = `
<DocumentFragment>
  .cache-jowu2x-Grid {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  padding-left: 32px;
  padding-right: 32px;
}

@media (min-width: 576px) {
  .cache-jowu2x-Grid {
    max-width: 540px;
  }
}

@media (min-width: 768px) {
  .cache-jowu2x-Grid {
    max-width: 720px;
  }
}

@media (min-width: 992px) {
  .cache-jowu2x-Grid {
    max-width: 960px;
  }
}

@media (min-width: 1200px) {
  .cache-jowu2x-Grid {
    max-width: 1140px;
  }
}

<div
    class="em1vjd40 cache-jowu2x-Grid"
  >
    Sample Grid
  </div>
</DocumentFragment>
`;

exports[`Grid Grid renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-1wa7do9-Grid {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  padding-left: 8px;
  padding-right: 8px;
}

@media (min-width: 576px) {
  .cache-1wa7do9-Grid {
    max-width: 540px;
  }
}

@media (min-width: 768px) {
  .cache-1wa7do9-Grid {
    max-width: 720px;
  }
}

@media (min-width: 992px) {
  .cache-1wa7do9-Grid {
    max-width: 960px;
  }
}

@media (min-width: 1200px) {
  .cache-1wa7do9-Grid {
    max-width: 1140px;
  }
}

<div
    class="em1vjd40 cache-1wa7do9-Grid"
  >
    Sample Grid
  </div>
</DocumentFragment>
`;

exports[`Grid Row renders correctly with custom gutter 1`] = `
<DocumentFragment>
  .cache-1qa9y5b-Row {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -32px;
  margin-right: -32px;
}

<div
    class="e1uuye5o0 cache-1qa9y5b-Row"
  >
    Sample Row
  </div>
</DocumentFragment>
`;

exports[`Grid Row renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-qfg6pl-Row {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -8px;
  margin-right: -8px;
}

<div
    class="e1uuye5o0 cache-qfg6pl-Row"
  >
    Sample Row
  </div>
</DocumentFragment>
`;
